{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 308,
  "lineage": "7f6f27e5-12df-398a-183a-200375382375",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/http"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "location": "westus2",
            "name": "loadBalancer",
            "resource_group_name": "jfrog",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_public_ip.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkInterfaces/backend_address01/ipConfigurations/testConfiguration"
            ],
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "jfrog"
          },
          "dependencies": [
            "azurerm_public_ip.test",
            "azurerm_resource_group.test",
            "azurerm_lb.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "jfrog"
          },
          "dependencies": [
            "azurerm_lb.test",
            "azurerm_public_ip.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": true,
            "frontend_ip_configuration_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 22,
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer",
            "name": "http",
            "probe_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/probes/ssh-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "jfrog"
          },
          "dependencies": [
            "azurerm_lb.test",
            "azurerm_lb_backend_address_pool.test",
            "azurerm_lb_probe.test",
            "azurerm_public_ip.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkInterfaces/backend_address01",
            "internal_domain_name_suffix": "z0zzdkdboupubnuy53svbj4udh.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/virtualNetworks/acctvn/subnets/acctsub"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-C6-1B-5B",
            "name": "backend_address01",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "jfrog",
            "virtual_machine_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Compute/virtualMachines/jfrogapp01"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_subnet.test",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkInterfaces/backend_address01/ipConfigurations/testConfiguration|/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/loadBalancers/loadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "testConfiguration",
            "network_interface_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkInterfaces/backend_address01"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_subnet.test",
            "azurerm_virtual_network.test",
            "azurerm_lb.test",
            "azurerm_lb_backend_address_pool.test",
            "azurerm_network_interface.test01",
            "azurerm_public_ip.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup01",
            "location": "westus2",
            "name": "SecurityGroup01",
            "resource_group_name": "jfrog",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sg_rule_02",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup01/securityRules/sg_rule_01",
            "name": "sg_rule_01",
            "network_security_group_name": "SecurityGroup01",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "jfrog",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup01/securityRules/sg_rule_02",
            "name": "sg_rule_02",
            "network_security_group_name": "SecurityGroup01",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "jfrog",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.69.139.185",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "PublicIPForLB",
            "resource_group_name": "jfrog",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/virtualNetworks/acctvn/subnets/acctsub",
            "name": "acctsub",
            "resource_group_name": "jfrog",
            "virtual_network_name": "acctvn"
          },
          "dependencies": [
            "azurerm_virtual_network.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/virtualNetworks/acctvn/subnets/acctsub",
            "network_security_group_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup01",
            "subnet_id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/virtualNetworks/acctvn/subnets/acctsub"
          },
          "dependencies": [
            "azurerm_subnet.test",
            "azurerm_virtual_network.test",
            "azurerm_network_security_group.test",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "a891b3ce-7561-401f-b698-ff6550a7d41f",
            "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/virtualNetworks/acctvn",
            "location": "westus2",
            "name": "acctvn",
            "resource_group_name": "jfrog",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/virtualNetworks/acctvn/subnets/acctsub",
                "name": "acctsub",
                "security_group": "/subscriptions/5574b6c1-8964-4c00-a89d-73977f7bdd67/resourceGroups/jfrog/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup01"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    }
  ]
}